--- a/jquery.sitekit/demo.html
+++ b/jquery.sitekit/demo.html
@@ -30,7 +30,9 @@ dt{
 dd{
 	margin:8px 0 32px;
 }
-
+.demo3{
+	margin:0 300px 400px;
+}
 </style>
 <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.8.2/jquery.min.js"></script>
 <script src="jquery.sitekit.js"></script>
@@ -47,11 +49,12 @@ jQuery(function(){
 		showSearchButton : false
 	});
 
-
 });
 </script>
 </head>
 <body>
+
+
 	<h1>jQuery Site Kit</h1>
 
 	<h2>Social Buttons</h2>
