--- a/jquery.sitekit/demo.html
+++ b/jquery.sitekit/demo.html
@@ -31,13 +31,15 @@ dd{
 	margin:8px 0 32px;
 }
 .demo3{
-	margin:0 300px 400px;
+	width:500px;
 }
 </style>
 <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.8.2/jquery.min.js"></script>
 <script src="jquery.sitekit.js"></script>
 <script>
 jQuery(function(){
+
+
 	$('dl.demo1 dt a').socialButtons({
 		appendTo : 'dl.demo dd'
 	});
